Contact section added

--- a/index.html
+++ b/index.html
@@ -160,13 +160,14 @@
       </article>
 
       <article class="contact-form">
-
-        <form>
-          <h4>write to us</h4>
+				
+				<h4>write to us</h4>
+        <form class="form">
           <input type="text" name="First Name" placeholder="first name" class="form-item">
           <input type="text" name="Last Name" placeholder="last name" class="form-item">
           <input type="email" name="Email" placeholder="email address" class="form-item">
-          <textarea rows="7" name="Message" placeholder="your message"></textarea>
+					<textarea rows="7" name="Message" placeholder="your message" class="form-item"></textarea>
+					<button type="submit" class="form-btn">send message</button>
         </form>
       </article>
 
