owl carousel fixed

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
           <input type="text" name="Last Name" placeholder="last name" class="form-item">
           <input type="email" name="Email" placeholder="email address" class="form-item">
 					<textarea rows="7" name="Message" placeholder="your message" class="form-item"></textarea>
-					<button type="submit" class="form-btn">send message</button>
+					<button type="submit" class="form-btn btn">send message</button>
         </form>
       </article>
 
