--- a/index.html
+++ b/index.html
@@ -133,6 +133,130 @@
 
 
 
+  <!-- SERVICES -->
+  <section class="section services" id="services">
+
+    <div class="section-title contact-title">
+      <h2>our specializations</h2>
+      <div class="underline"></div>
+    </div>
+    
+    <div class="section-center services-center">
+
+      <!-- single service -->
+      <article class="service">
+        <img src="./images/digital-art.jpg" alt="Digital Art" class="service-image">
+        <div class="service-info">
+          <h3 class="service-title">digital arts</h3>
+          <p class="service-text">A digital arts program will educate you about the theories and techniques needed to create computer-aided art in areas
+          such as 3-D modeling, animation, and gaming. You will learn the hands-on skills you need to work with animation and
+          design software and immerse yourself in the practice of drawing figures, sketching, and storyboarding. Some digital arts
+          programs offer additional courses with in-depth instruction in content development, web design, color theory, animation,
+          4-D animation, and drawing.</p>
+        </div>
+      </article>
+      <!-- end of single service -->
+
+      <!-- single service -->
+      <article class="service">
+        <img src="./images/Fashion & Apparel Design.jpg" alt="Fashion Design" class="service-image">
+        <div class="service-info">
+          <h3 class="service-title">fashion design</h3>
+          <p class="service-text">A fashion design education covers critical concepts necessary to succeed as a designer along with the professional
+          techniques and business practices that are common in the contemporary fashion design industry. Expect to study clothing
+          construction, draping, product development, pattern design, and merchandise promotion, along with the application of
+          design concepts and CAD software. Students enrolled in a fashion and apparel design program may also have the
+          opportunity to choose a specialty such as children’s clothing design, sportswear, costume design, women’s wear, intimate
+          apparel or footwear.</p>
+        </div>
+      </article>
+      <!-- end of single service -->
+
+      <!-- single service -->
+      <article class="service">
+        <img src="./images/fine arts.jpg" alt="Fine Arts" class="service-image">
+        <div class="service-info">
+          <h3 class="service-title">fine/studio arts</h3>
+          <p class="service-text">Degree programs in Fine Arts (BFA) typically have a narrow focus on academic curriculum and training that will help
+          students hone their craft so they can become professionals in art, theater, music, photography, ceramics, printmaking,
+          and other studio arts. If you play an instrument or have a passion for acting and theater, for example, you will find a
+          bachelor of fine arts program that will train you to perform professionally.</p>
+        </div>
+      </article>
+      <!-- end of single service -->
+
+      <!-- single service -->
+      <article class="service">
+        <img src="./images/Game & Interactive Media Design.jpg" alt="Game Design" class="service-image">
+        <div class="service-info">
+          <h3 class="service-title">Game & Interactive Media Design</h3>
+          <p class="service-text">Artists enrolled in a game art and design program learn the fundamentals required to develop a game’s aesthetic style, including the basic art principles associated with analog media and how to create art for games using modern software
+          and computer hardware. Students who specialize in game design will be immersed in the practice of concept art, with an
+          emphasis on rendering objects, characters, environments, and special effects.</p>
+        </div>
+      </article>
+      <!-- end of single service -->
+
+      <!-- single service -->
+      <article class="service">
+        <img src="./images/graphic-design.jpg" alt="Graphic Design" class="service-image">
+        <div class="service-info">
+          <h3 class="service-title">graphic design</h3>
+          <p class="service-text">Graphic design programs explore the world of digital media and focus on the professional and technical skills used to
+          create digital images and animation. Students attending programs at the bachelor’s degree level learn how to use
+          industry-standard technology to create computer-based still and animated images. A wide range of sub-disciplines, such
+          as digital imaging, commercial & advertising design,2-D and 3-D design, typography, film animation, and graphic
+          illustration, may be paired with the core curriculum of a graphic design program to prepare students for the
+          ever-changing landscape of modern art and media.</p>
+        </div>
+      </article>
+      <!-- end of single service -->
+
+      <!-- single service -->
+      <article class="service">
+        <img src="./images/Interior Design.jpg" alt="Interior Design" class="service-image"> 
+        <div class="service-info">
+          <h3 class="service-title">interior designing</h3>
+          <p class="service-text">An interior design program provides you with the skills to create aesthetically pleasing spaces that meet the needs of your clients. Courses will focus on design processes, sustainable practices, material selection, textiles, fixtures,
+          historical periods, furniture styles, spatial considerations, and regulatory basics like building codes, ethics, and
+          other legal aspects of the industry that will impact your practice.</p>
+        </div>
+      </article>
+      <!-- end of single service -->
+
+      <!-- single service -->
+      <article class="service">
+        <img src="./images/Multimedia and Animation.jpg" alt="Multimedia Design" class="service-image">
+        <div class="service-info">
+          <h3 class="service-title">multimedia and animation</h3>
+          <p class="service-text">Multimedia and animation degrees equip students will a well-rounded education in preparation for creative careers in
+          areas such as journalism, film, advertising, television, and game development. The objective of a multimedia program is
+          to help students gain a balanced understanding of how to create visual, audio, and written art in all forms of media. A
+          liberal arts education is paired with a focused curriculum in areas such as writing, drawing, computer programming,
+          broadcasting, podcasting, layout design, and 3D animation.</p>
+        </div>
+      </article>
+      <!-- end of single service -->
+
+      <!-- single service -->
+      <article class="service">
+        <img src="./images/Visual Arts.jpg" alt="Visual Arts" class="service-image">
+        <div class="service-info">
+          <h3 class="service-title">visual arts</h3>
+          <p class="service-text">Visual art is an umbrella term that covers many different programs of study such as painting, drawing, printmaking,
+          sculpture, photography, and ceramics. It even includes artistic careers in the video, architecture, textile, industrial,
+          fashion, and interior design. If the career field you are pursuing is both artistic and a visual medium, chances are it
+          falls under the category of visual art.</p>
+        </div>
+      </article>
+      <!-- end of single service -->
+
+    </div>
+
+  </section>
+  <!-- END OF SERVICES -->
+
+
   <!-- TEAM -->
   <section class="section team" id="team">
 
