--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
       <div class="underline"></div>
     </div>
     
-    <div class="section-center services-center">
+    <div class="section-center services-center owl-carousel owl-theme">
 
       <!-- single service -->
       <article class="service">
-        <img src="./images/digital-art.jpg" alt="Digital Art" class="service-image">
+        <!-- <img src="./images/digital-art.jpg" alt="Digital Art" class="service-image"> -->
         <div class="service-info">
           <h3 class="service-title">digital arts</h3>
           <p class="service-text">A digital arts program will educate you about the theories and techniques needed to create computer-aided art in areas
@@ -159,7 +159,7 @@
 
       <!-- single service -->
       <article class="service">
-        <img src="./images/Fashion & Apparel Design.jpg" alt="Fashion Design" class="service-image">
+        <!-- <img src="./images/Fashion & Apparel Design.jpg" alt="Fashion Design" class="service-image"> -->
         <div class="service-info">
           <h3 class="service-title">fashion design</h3>
           <p class="service-text">A fashion design education covers critical concepts necessary to succeed as a designer along with the professional
@@ -174,7 +174,7 @@
 
       <!-- single service -->
       <article class="service">
-        <img src="./images/fine arts.jpg" alt="Fine Arts" class="service-image">
+        <!-- <img src="./images/fine arts.jpg" alt="Fine Arts" class="service-image"> -->
         <div class="service-info">
           <h3 class="service-title">fine/studio arts</h3>
           <p class="service-text">Degree programs in Fine Arts (BFA) typically have a narrow focus on academic curriculum and training that will help
@@ -187,7 +187,7 @@
 
       <!-- single service -->
       <article class="service">
-        <img src="./images/Game & Interactive Media Design.jpg" alt="Game Design" class="service-image">
+        <!-- <img src="./images/Game & Interactive Media Design.jpg" alt="Game Design" class="service-image"> -->
         <div class="service-info">
           <h3 class="service-title">Game & Interactive Media Design</h3>
           <p class="service-text">Artists enrolled in a game art and design program learn the fundamentals required to develop a game’s aesthetic style, including the basic art principles associated with analog media and how to create art for games using modern software
@@ -199,7 +199,7 @@
 
       <!-- single service -->
       <article class="service">
-        <img src="./images/graphic-design.jpg" alt="Graphic Design" class="service-image">
+        <!-- <img src="./images/graphic-design.jpg" alt="Graphic Design" class="service-image"> -->
         <div class="service-info">
           <h3 class="service-title">graphic design</h3>
           <p class="service-text">Graphic design programs explore the world of digital media and focus on the professional and technical skills used to
@@ -214,7 +214,7 @@
 
       <!-- single service -->
       <article class="service">
-        <img src="./images/Interior Design.jpg" alt="Interior Design" class="service-image"> 
+        <!-- <img src="./images/Interior Design.jpg" alt="Interior Design" class="service-image">  -->
         <div class="service-info">
           <h3 class="service-title">interior designing</h3>
           <p class="service-text">An interior design program provides you with the skills to create aesthetically pleasing spaces that meet the needs of your clients. Courses will focus on design processes, sustainable practices, material selection, textiles, fixtures,
@@ -226,7 +226,7 @@
 
       <!-- single service -->
       <article class="service">
-        <img src="./images/Multimedia and Animation.jpg" alt="Multimedia Design" class="service-image">
+        <!-- <img src="./images/Multimedia and Animation.jpg" alt="Multimedia Design" class="service-image"> -->
         <div class="service-info">
           <h3 class="service-title">multimedia and animation</h3>
           <p class="service-text">Multimedia and animation degrees equip students will a well-rounded education in preparation for creative careers in
@@ -240,7 +240,7 @@
 
       <!-- single service -->
       <article class="service">
-        <img src="./images/Visual Arts.jpg" alt="Visual Arts" class="service-image">
+        <!-- <img src="./images/Visual Arts.jpg" alt="Visual Arts" class="service-image"> -->
         <div class="service-info">
           <h3 class="service-title">visual arts</h3>
           <p class="service-text">Visual art is an umbrella term that covers many different programs of study such as painting, drawing, printmaking,
