Nav autoclosing for small screen fixed

--- a/index.html
+++ b/index.html
@@ -453,8 +453,8 @@
             
         <img src="./images/kyra2.jpg" alt="Sketch" class="work-image">
         <div class="work-info">
-          <h4 class="work-owner"><span id=work-owner-sp>by</span> Kyra</h4>
-          <a href="https://instagram.com/artist_mansion?igshid=19w9yshuklxt5" class="work-link" target="_blank"><span class="work-icon"><i class="fab fa-instagram"></i></span></a>
+          <h4 class="work-owner"><span id=work-owner-sp>by</span> Divya</h4>
+          <a href="https://instagram.com/kalakari_by_diva?igshid=1xa6rrg78x09u" class="work-link" target="_blank"><span class="work-icon"><i class="fab fa-instagram"></i></span></a>
         </div>
             
       </article>
