--- a/index.html
+++ b/index.html
@@ -462,7 +462,11 @@
         <!-- single team member -->
         <article class="member">
           <div class="member-img">
-            <img src="./images/team1.jpg" class="member-image" />
+            <img
+              src="https://res.cloudinary.com/dds18bzdy/image/upload/c_scale,h_400/v1615844924/images%20of%20random%20people%20for%20projects/one_cvnznj.webp"
+              class="member-image"
+              alt="team member"
+            />
           </div>
           <div class="member-info">
             <h4 class="member-name">rohit mehra</h4>
@@ -482,7 +486,11 @@
         <!-- single team member -->
         <article class="member">
           <div class="member-img">
-            <img src="./images/team3.jpg" class="member-image" />
+            <img
+              src="https://res.cloudinary.com/dds18bzdy/image/upload/c_scale,h_400/v1615844924/images%20of%20random%20people%20for%20projects/seven_cmucen.webp"
+              class="member-image"
+              alt="team member"
+            />
           </div>
           <div class="member-info">
             <h4 class="member-name">michael scofield</h4>
@@ -502,7 +510,11 @@
         <!-- single team member -->
         <article class="member">
           <div class="member-img">
-            <img src="./images/team4.jpg" class="member-image" />
+            <img
+              src="https://res.cloudinary.com/dds18bzdy/image/upload/c_scale,h_400/v1615844922/images%20of%20random%20people%20for%20projects/eight_bx43ub.webp"
+              class="member-image"
+              alt="team member"
+            />
           </div>
           <div class="member-info">
             <h4 class="member-name">gretchen morgan</h4>
@@ -522,7 +534,11 @@
         <!-- single team member -->
         <article class="member">
           <div class="member-img">
-            <img src="./images/team5.jpg" class="member-image" />
+            <img
+              src="https://res.cloudinary.com/dds18bzdy/image/upload/c_scale,h_400/v1615844922/images%20of%20random%20people%20for%20projects/five_xxucxl.webp"
+              class="member-image"
+              alt="team member"
+            />
           </div>
           <div class="member-info">
             <h4 class="member-name">iris west</h4>
@@ -542,7 +558,11 @@
         <!-- single team member -->
         <article class="member">
           <div class="member-img">
-            <img src="./images/team2.jpg" class="member-image" />
+            <img
+              src="https://res.cloudinary.com/dds18bzdy/image/upload/c_scale,h_400/v1615844922/images%20of%20random%20people%20for%20projects/four_sq5idk.webp"
+              class="member-image"
+              alt="team member"
+            />
           </div>
           <div class="member-info">
             <h4 class="member-name">jim halpert</h4>
@@ -562,7 +582,11 @@
         <!-- single team member -->
         <article class="member">
           <div class="member-img">
-            <img src="./images/team6.jpeg" class="member-image" />
+            <img
+              src="https://res.cloudinary.com/dds18bzdy/image/upload/c_scale,h_400/v1615844922/images%20of%20random%20people%20for%20projects/nine_pydfjt.webp"
+              class="member-image"
+              alt="team member"
+            />
           </div>
           <div class="member-info">
             <h4 class="member-name">sara lynn</h4>
@@ -599,7 +623,11 @@
           </p>
           <h4 class="student-name">Marlene</h4>
           <p class="student-place">United States</p>
-          <img src="./images/review1.jpg" alt="student" class="student-image" />
+          <img
+            src="https://picsum.photos/200/200?random=1"
+            alt="student"
+            class="student-image"
+          />
         </article>
         <!-- end of single student -->
 
@@ -612,7 +640,7 @@
           <h4 class="student-name">radhika</h4>
           <p class="student-place">mumbai</p>
           <img
-            src="./images/review2.jpeg"
+            src="https://picsum.photos/200/200?random=2"
             alt="student"
             class="student-image"
           />
@@ -628,7 +656,11 @@
           </p>
           <h4 class="student-name">harry</h4>
           <p class="student-place">brazil</p>
-          <img src="./images/review3.jpg" alt="student" class="student-image" />
+          <img
+            src="https://picsum.photos/200/200?random=3"
+            alt="student"
+            class="student-image"
+          />
         </article>
         <!-- end of single student -->
 
@@ -641,7 +673,11 @@
           </p>
           <h4 class="student-name">garth</h4>
           <p class="student-place">new zealand</p>
-          <img src="./images/review4.jpg" alt="student" class="student-image" />
+          <img
+            src="https://picsum.photos/200/200?random=4"
+            alt="student"
+            class="student-image"
+          />
         </article>
         <!-- end of single student -->
 
@@ -653,7 +689,11 @@
           </p>
           <h4 class="student-name">laurel</h4>
           <p class="student-place">ireland</p>
-          <img src="./images/review5.jpg" alt="student" class="student-image" />
+          <img
+            src="https://picsum.photos/200/200?random=5"
+            alt="student"
+            class="student-image"
+          />
         </article>
         <!-- end of single student -->
 
@@ -666,7 +706,11 @@
           </p>
           <h4 class="student-name">barry</h4>
           <p class="student-place">australia</p>
-          <img src="./images/review6.jpg" alt="student" class="student-image" />
+          <img
+            src="https://picsum.photos/200/200?random=6"
+            alt="student"
+            class="student-image"
+          />
         </article>
         <!-- end of single student -->
 
@@ -679,7 +723,11 @@
           </p>
           <h4 class="student-name">gustavo</h4>
           <p class="student-place">United States</p>
-          <img src="./images/review7.jpg" alt="student" class="student-image" />
+          <img
+            src="https://picsum.photos/200/200?random=7"
+            alt="student"
+            class="student-image"
+          />
         </article>
         <!-- end of single student -->
 
@@ -692,7 +740,11 @@
           </p>
           <h4 class="student-name">skyler</h4>
           <p class="student-place">namibias</p>
-          <img src="./images/review8.jpg" alt="student" class="student-image" />
+          <img
+            src="https://picsum.photos/200/200?random=8"
+            alt="student"
+            class="student-image"
+          />
         </article>
         <!-- end of single student -->
       </div>
